@@ -17,6 +17,10 @@ CHANGES - Current Version:
   necessarily meters.  Adjusted mitab_coordsys.cpp to reflect this. 
   http://bugzilla.remotesensing.org/show_bug.cgi?id=1113
 
+- Similar problem in mitab_spatialref.cpp for TAB files also fixed. 
+  http://bugzilla.remotesensing.org/show_bug.cgi?id=1113
+
+
 
 Version 1.5.0 (2006-02-16)
 --------------------------
@@ -710,5 +714,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.159 2006-03-10 19:50:45 fwarmerdam Exp $
+$Id: HISTORY.TXT,v 1.160 2006-05-09 20:21:29 fwarmerdam Exp $
 ------------
